iowow (1.3.12) UNRELEASED; urgency=medium

  * Android NDK support (#23)

 -- Anton Adamansky <adamansky@gmail.com>  Fri, 12 Apr 2019 00:43:16 +0700

iowow (1.3.11) testing; urgency=medium

  * Added size_t iwpool_allocated_size(IWPOOL *pool) (iwpool.h)
  * Added `file_lock_fail_fast` iwkv open option.
    If `true` - do not wait and raise error if database is locked by another process
  * Fixed meaningful PVP studio errors:
    - kv/iwkv.c:593:1: error: V774
    - kv/iwkv.c:1375:1: warning: V649
    - kv/iwkv.c:3357:1: warning: V581
    - utils/iwxstr.c:59:1: warning: V701

 -- Anton Adamansky <adamansky@gmail.com>  Mon, 08 Apr 2019 11:47:59 +0700

iowow (1.3.10) testing; urgency=medium

  * Added cmake `OWNER_PROJECT_NAME` option used to install header files in `CMAKE_INSTALL_INCLUDEDIR}/OWNER_PROJECT_NAME/PROJECT_NAME`
  * Removed `-fvisibility=hidden` C flag when building shared library

 -- Anton Adamansky <adamansky@gmail.com>  Fri, 05 Apr 2019 11:53:34 +0700

iowow (1.3.9) testing; urgency=medium

  * BUG `IW_HAVE_PTHREAD_CONDATTR_SETCLOCK` was not properly set for `iwal.c` hence high CPU usage when `wal` mode is on.

 -- Anton Adamansky <adamansky@gmail.com>  Fri, 29 Mar 2019 23:56:25 +0700

iowow (1.3.8) testing; urgency=medium

  * BUG Fixed incorrect call of `_kvblk_kv_get` in `iwkv_cursor_seth`.
    See https://github.com/Softmotions/ejdb/issues/231

 -- Anton Adamansky <adamansky@gmail.com>  Wed, 27 Mar 2019 12:34:10 +0700

iowow (1.3.7) testing; urgency=medium

  * Added `iwkv_cursor_del()` (#22)
  * Fixed memory corruption during simultaneous cursor iteration and value updating

 -- Anton Adamansky <adamansky@gmail.com>  Tue, 26 Mar 2019 18:24:35 +0700

iowow (1.3.6) testing; urgency=medium

  * BUG: Memory leak in `iwkv_cursor_open` on error (#21)
  * BUG: `iwxstr_new2()` with zero size argument causes illegal memory write (#20)
  * Added `iwkv_cursor_seth()` record update handle supported by `iwkv_cursor_set`