@@ -1,6 +1,7 @@
 iowow (1.3.12) UNRELEASED; urgency=medium
 
   * Android NDK support (#23)
+  * Pphreads `PTHREAD_RWLOCK_PREFER_WRITER_NONRECURSIVE_NP` is used by default
 
  -- Anton Adamansky <adamansky@gmail.com>  Fri, 12 Apr 2019 00:43:16 +0700
 
